css/styles.css
/* Shared header and main body styles */

body {
    max-width: 1280px;
    justify-content: center;
    border-style: solid;
    border-color: lightgrey;
    border-width: thin;
    margin: auto;
}

header {
    padding: 10px 20px;    
}

.navbar {
    text-align: center;
    border: none;
    
    justify-content: center;
}

#welcomeLink {
    max-width: 100px;
}

#experienceLink {
    max-width: 100px;
}

#contactLink {
    max-width: 100px;
}

a {
    padding: 8px;
}

.flex-container {
    display: inline-flex;
    flex-wrap: wrap;   
  }

  .pic {
    width: 450px;
    object-fit: contain;
    align-self: flex-start;
    
  }

  .logo {
       width: 20px;
       float: left;

  }

  .logosmfloat {
    position: relative;
    left: -5px;
    top: -10px;
  }

  .logofloat {
 
    position: relative;
    left: -20px;
    top: -20px;
  }

  #line {
      position: relative;
      top: -45px;
      z-index: -1;
  }

  .nav-item {
      background-color: white;
  }

  a.active {
      text-decoration: underline;
  }

  .main {
      flex: 1;
  }
  
  .flex-container > div {
    margin: 20px;
    
  }

  
/*  Experience  */
section div.carousel-item img{
    width: 500px;
}

.compimage {
    width: 500px;
}

#mountainimage {
    height: 350px;
    padding-bottom: 20px;
}

section div.item h3{
    text-align: center;
}

.carousel-inner {
    text-align: center;
    
}

.carousel .carousel-item > img {
    display: inline-block;
    text-align: center;
}

section.carousel {
    
}

.expParagraph {
    margin-bottom: 20px;
    height: 150px;
}

.carousel-indicators li {
    background-color: lightgrey;
}

.carousel-indicators .active {
    background-color: red;
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
  
}

.carousel-control-prev-icon,
.carousel-control-next-icon {
  
}

.carousel-control-next-icon:after
{
  content: '>';
  font-size: 55px;
  color: red;
}

.carousel-control-prev-icon:after {
  content: '<';
  font-size: 55px;
  color: red;
}

 




/* Contact */

  .intro {
      margin-top: 0px;
  }

  .social {
      height: 20px;
      width: 20px;
  }

  button {
      border: none;
      background-color: transparent;
  }

  #contactText {
      padding-left: 20px;
  }

  #contactMain {
      padding-left: 65px;
      max-width: 800px;
  }

  #contactForm {
      padding-top: 30px;
  }

  .flexNameContainer {
    display: flex;
  }

  .flex-container > div {
    margin: 10px;
    padding: 20px;
 }

  
  #contactFName {
      margin-right: 30px;
      min-width: 100px;
  }

  .wrap {
      display: inline;
  }

  #contactLName {
      min-width: 100px;
  }

  #contactForm div {
      
      float: left;
  }

  .floatClear {
     clear: both; 
  }

  main.contactMain input {
      background-color: #EAEAEA;
  }

  .contactFields {
      height: 40px;
      margin-bottom: 40px;
      background-color: #F5F5F5;
      border-color: #CFCFCF;
      border-style: solid;
      border-width: 1px;
      width: 100%;
  }

  .contactNameLabel {
      font-size: xx-small;
   }

  .contactNames {
      display: block;
      height: 40px;
      background-color: #F5F5F5;
      border-color: #CFCFCF;
      border-style: solid;
      border-width: 1px;
      width: 100%;
      
  }

  .contactEmailLabel {
      margin-top: 20px;
  }

  #contactEmail {
      min-width: 240px;
  }

  #contactSubject {
      min-width: 240px;
  }

  #contactMessage {
      min-width: 360px;
      margin-bottom: 40px;
      background-color: #F5F5F5;
      border-color: #CFCFCF;
      border-style: solid;
      border-width: 1px;
      width: 100%;
      
  }

  #contactsubmit {
      background-color: black;
      color: white;
      height: 40px;
      padding-left: 30px;
      padding-right: 30px;
      margin-bottom: 30px;
  }
  /*
  .contactNames {
    display: inline-block;
    width: 6em;
    position: relative;
    top: -3em;
  }

  .contactNameLabel {
      display: inline-block;
      width: 6em;
      margin-right: .5em;
      padding-top: 1.5em;
      font-size: xx-small;
   }
   */

